--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,7 @@ name: CI and Deploy Lambda
 
 on:
   push:
-    branches: [ main ]
+    branches: [ feature/demo ]
 
 env:
   TF_VAR_region: us-east-1                 # change if needed
